--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>navbar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css">
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/webpage.css">
 </head>
 
 <body>
