--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>navbar</title>
+    <link rel="stylesheet" href="/webpage/css/min.css">
     <link rel="stylesheet" href="/webpage/css/webpage.css">
 </head>
 
