--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/587b684c72.js" crossorigin="anonymous"></script>
     <title>navbar</title>
     <link rel="stylesheet" href="/webpage/css/min.css">
     <link rel="stylesheet" href="/webpage/css/webpage.css">
